# streamlit-deploy-poc-multi

./: .env.sample  .gitignore
docs/: github-actions-deploy.md  runtime-selection-plan.md
infra/env/dev/: backend.tf  backend.tfbackend.example  main.tf  outputs.tf  terraform.tfvars.sample  variables.tf
infra/modules/sis_streamlit/: main.tf  outputs.tf  variables.tf
infra/modules/snowflake_schema/: main.tf  outputs.tf  variables.tf
scripts/: deploy_infra.sh  destroy_all.sh  test_common_targets.sh  upload_streamlit_spcs.sh  upload_streamlit_wh.sh
streamlit/: .gitignore  README.md  environment.yml  pyproject.toml
streamlit/.streamlit/: secrets.toml.sample
streamlit/apps/app1/: streamlit_app.py
streamlit/common/: utils.py
